--- a/sentiment_analysis/frontend/package.json
+++ b/sentiment_analysis/frontend/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "rimraf ../../static/sentiment_analysis && move build ../../static/sentiment_analysis",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "move-cli": "^2.0.0",
+    "rimraf": "^5.0.0"
   }
 }
